--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "fast-deep-equal": "^3.1.3",
     "react-resize-detector": "^7.1.2",
     "throttle-debounce": "^3.0.1"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
