--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "react-datasheet-grid",
+  "name": "silkhub-datasheet-grid",
   "version": "4.11.5",
-  "description": "An Excel-like React component to create beautiful spreadsheets.",
+  "description": "An Excel-like React component to create beautiful spreadsheets. Based on  Nicolas Kellers' grid",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "types": [
+        "dist/index.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "build": "rm -f tsconfig.tsbuildinfo && rimraf ./dist && tsc && cpx \"src/**/*.css\" dist",
     "start": "concurrently \"tsc --watch\" \"cpx \\\"src/**/*.css\\\" dist --watch\"",
@@ -28,45 +35,46 @@
   "repository": "nick-keller/react-datasheet-grid",
   "homepage": "https://react-datasheet-grid.netlify.app/",
   "devDependencies": {
-    "@jest/types": "^27.4.2",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/jsdom": "^16.2.13",
-    "@types/react": "^18.0.8",
-    "@types/throttle-debounce": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "concurrently": "^6.2.0",
+    "@jest/types": "^29.6.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
+    "@types/react": "^19.0.12",
+    "@types/throttle-debounce": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
+    "concurrently": "^9.1.2",
     "cpx": "^1.5.0",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "jest": "^27.4.7",
-    "jsdom": "^16.6.0",
-    "prettier": "^2.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "@types/react-dom": "19.0.4"
   },
   "files": [
     "dist/**/*"
   ],
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@tanstack/react-virtual": "^3.0.0-beta.18",
-    "classnames": "^2.3.1",
+    "@tanstack/react-virtual": "^3.13.4",
+    "classnames": "^2.5.1",
     "fast-deep-equal": "^3.1.3",
-    "react-resize-detector": "^7.1.2",
-    "throttle-debounce": "^3.0.1"
+    "react-resize-detector": "^12.0.2",
+    "throttle-debounce": "^5.0.2"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
