Upgrade to tanstack virtual-core 3.9.0

--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "react-resize-detector": "^12.0.2",
     "throttle-debounce": "^5.0.2"
   },
+  "resolutions": {
+    "@tanstack/virtual-core": "3.9.0"
+  },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
